feat(project): expand structure and enhance documentation
- Add new config files to configs/
- Add .zfunc/ with ZSH functions and README.md
- Add fonts/ with README.md
- Add other/ with WebStorm theme, settings, and README.md
- Update configs/README.md with unified style and new details
- Update root README.md with detailed structure and requirements
- Refactor .zshrc to improve structure and add new settings

--- a/configs/.makepkg.conf
+++ b/configs/.makepkg.conf
@@ -1,3 +1,5 @@
+# $HOME/.makepkg.conf
+
 CFLAGS="-march=native -mtune=native -O2 -pipe -fno-plt -fexceptions \
       -Wp,-D_FORTIFY_SOURCE=3 -Wformat -Werror=format-security \
       -fstack-clash-protection -fcf-protection"
