--- a/templates/example-system.service
+++ b/templates/example-system.service
@@ -1,18 +1,29 @@
 # /etc/systemd/system/example-system.service
 
 [Unit]
-Description=Example System Service (e.g., Web Server) # Human-readable description
-After=network.target                                  # Start after network is ready
+# Human-readable description
+Description=Example System Service (e.g., Web Server)
+# Start after network is ready
+After=network.target
 
 [Service]
-Type=simple                                           # Service type (simple, forking, notify)
-ExecStart=/usr/bin/nginx -g "daemon off;"             # Absolute path to executable + args
-Restart=on-failure                                    # Auto-restart on crashes
-RestartSec=5s                                         # Delay before restart (optional)
-User=http                                             # Run as specific user (security!)
-Group=http                                            # Run as specific group
-Environment="VAR=value"                               # Set environment variables
-WorkingDirectory=/etc/nginx                           # Working directory for the app
+# Service type (simple, forking, notify)
+Type=simple
+# Absolute path to executable + args
+ExecStart=/usr/bin/nginx -g "daemon off;"
+# Auto-restart on crashes
+Restart=on-failure
+# Delay before restart (optional)
+RestartSec=5s
+# Run as specific user
+User=http
+# Run as specific group
+Group=http
+# Set environment variables
+Environment="VAR=value"
+# Working directory for the app
+WorkingDirectory=/etc/nginx
 
 [Install]
-WantedBy=multi-user.target                            # Enable for default server runlevel
+# Enable for default server runlevel
+WantedBy=multi-user.target
