--- a/templates/example-user.service
+++ b/templates/example-user.service
@@ -1,15 +1,23 @@
 # $HOME/.config/systemd/user/example-user.service
 
 [Unit]
-Description=Example User Service (e.g., Script)       # Service description
-After=network-online.target                           # Optional network dependency
+# Service description
+Description=Example User Service (e.g., Script)
+# Optional network dependency
+After=network-online.target
 
 [Service]
-Type=simple                                           # Default type for scripts
-ExecStart=/usr/bin/zsh %h/scripts/my_script.zsh       # %h = user's home directory
-Restart=on-failure                                    # Auto-restart on failure
-Environment="DISPLAY=:0"                              # For GUI apps (optional)
-WorkingDirectory=%h/project                           # Set working directory
+# Default type for scripts
+Type=simple
+# %h = user's home directory
+ExecStart=/usr/bin/zsh %h/scripts/my_script.zsh
+# Auto-restart on failure
+Restart=on-failure
+# For GUI apps (optional)
+Environment="DISPLAY=:0"
+# Set working directory
+WorkingDirectory=%h/project
 
 [Install]
-WantedBy=default.target                               # Enable for user session
+# Enable for user session
+WantedBy=default.target
