--- a/configs/.htaccess
+++ b/configs/.htaccess
@@ -2,8 +2,10 @@
 AddDefaultCharset UTF-8
 ServerSignature Off
 
-# Redirects: www → non-www + HTTP → HTTPS
+# Redirects: (index.html -> /) + (www -> non-www) + (HTTP -> HTTPS)
 RewriteEngine On
+RewriteCond %{THE_REQUEST} ^[A-Z]{3,}\s/index\.html\s [NC]
+RewriteRule ^index\.html$ / [R=301,L]
 RewriteCond %{HTTP_HOST} ^www\.(.*)$ [NC]
 RewriteRule (.*) https://%1/$1 [R=301,L]
 RewriteCond %{HTTPS} off
