--- a/.gitignore
+++ b/.gitignore
@@ -108,8 +108,6 @@ Sessionx.vim
 .netrwhist
 tags
 [._]*.un~
-### Zed editor ###
-.zed
 ### Emacs ###
 /.emacs.desktop
 /.emacs.desktop.lock
@@ -141,6 +139,8 @@ node_modules/
 bower_components/
 # IDEs and editors
 .idea/
+.junie/
+.zed
 # misc
 .sass-cache/
 connect.lock/
