--- a/.gitignore
+++ b/.gitignore
@@ -1,224 +1,164 @@
 ### macOS ###
 .DS_Store
+.AppleDouble
+.LSOverride
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+### Windows ###
 Thumbs.db
-dist
-### NodeJS ###
+ehthumbs.db
+Desktop.ini
+$RECYCLE.BIN/
+*.cab
+*.msi
+*.msm
+*.msp
+*.lnk
+### Linux ###
+.fuse_hidden*
+.directory
+.Trash-*
+.nfs*
+# Node.js
+node_modules/
+.npm
+.yarn/
+.pnp.*
+.yarn-integrity
+.yarn/cache
+.yarn/unplugged
+.yarn/build-state.yml
+.yarn/install-state.gz
+# Build directories
+/dist
+/build
+/out
+.next/
+.nuxt/
+.cache/
+.parcel-cache/
+.serverless/
+.fusebox/
+.svelte-kit/
+.vuepress/dist/
+.temp/
+.docusaurus/
+# Logs
 logs
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
 lerna-debug.log*
 .pnpm-debug.log*
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
-pids
-*.pid
-*.seed
-*.pid.lock
-lib-cov
-coverage
+# Coverage
+coverage/
+.nyc_output/
 *.lcov
-.nyc_output
-.grunt
-bower_components
-.lock-wscript
-build/Release
-#node_modules/
-jspm_packages/
-web_modules/
-*.tsbuildinfo
-.npm
-.eslintcache
-.stylelintcache
-.rpt2_cache/
-.rts2_cache_cjs/
-.rts2_cache_es/
-.rts2_cache_umd/
-.node_repl_history
-*.tgz
-.yarn-integrity
+# Environment variables
 .env
-.env_priv
-.env.development.local
-.env.test.local
-.env.production.local
-.env.local
-.cache
-.parcel-cache
-.next
-out
-.nuxt
-.cache/
-.vuepress/dist
-.temp
-.docusaurus
-.serverless/
-.fusebox/
-.dynamodb/
-.tern-port
-.vscode-test
-.yarn/cache
-.yarn/unplugged
-.yarn/build-state.yml
-.yarn/install-state.gz
-.pnp.*
-.webpack/
-.svelte-kit
-### VSCode ###
+.env.*
+!.env.example
+# TypeScript
+*.tsbuildinfo
+# VSCode
 .vscode/*
+!.vscode/extensions.json
+!.vscode/settings.json
+!.vscode/launch.json
 .history/
 *.vsix
-.history
-.ionide
-### JetBrains ###
-.idea/**/*
+.ionide/
+# JetBrains IDEs
+.idea/
 *.iml
 *.ipr
-cmake-build-*/
+iws
 *.iws
 out/
 .idea_modules/
-atlassian-ide-plugin.xml
-com_crashlytics_export_strings.xml
-crashlytics.properties
-crashlytics-build.properties
-fabric.properties
-modules.xml
-### SublimeText ###
-*.tmlanguage.cache
-*.tmPreferences.cache
-*.stTheme.cache
-*.sublime-workspace
-*.sublime-project
-sftp-config.json
-sftp-config-alt*.json
-Package Control.*
-Package Control.*/*
-oscrypto-ca-bundle.crt
-bh_unicode_properties.cache
-GitHub.sublime-settings
-### Vim ###
-[._]*.s[a-v][a-z]
-[._]*.sw[a-p]
-[._]s[a-rt-v][a-z]
-[._]ss[a-gi-z]
-[._]sw[a-p]
+# Vim
+[._]*.s[a-w][a-z]
+[._]s[a-w][a-z]
+*.un~
 Session.vim
-Sessionx.vim
 .netrwhist
-tags
-[._]*.un~
-### Emacs ###
+*~
+# Emacs
+\#*\#
+.\#*
 /.emacs.desktop
 /.emacs.desktop.lock
 *.elc
 auto-save-list
-tramp
-.org-id-locations
-*_archive
-*_flymake.*
-/eshell/history
-/eshell/lastdir
-/elpa/
-*.rel
-.cask/
-flycheck_*.el
-/server/
-.projectile
-.dir-locals.el
-/network-security.data
-/build/
-### Angular ###
-# compiled output
-dist/
-tmp/
-app/**/*.js
-app/**/*.js.map
-# dependencies
-node_modules/
+\.#*
+\#*#
+*.swp
+*.*~
+projectile-bookmarks.eld
+# Zed editor
+.zed/
+# Bower
 bower_components/
-# IDEs and editors
-.idea/
-.zed
-#Ai
-.junie/
-.windsurfrules
-.lingma
-# misc
-.sass-cache/
-connect.lock/
-coverage/
-libpeerconnection.log/
-npm-debug.log
-testem.log
-typings/
-.angular/
-# e2e
-e2e/*.js
-e2e/*.map
-# System Files
-.DS_Store/
-### ArchLinuxPackages ###
+.bower-cache/
+.bower-registry/
+.bower-tmp/
+# Composer
+/vendor/
+composer.lock
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+# Cypress
+cypress/videos/
+cypress/screenshots/
+# Jest
+.jest/
+# Mocha
+reports/
+# Archives
+*.7z
+*.dmg
+*.gz
+*.iso
+*.jar
+*.rar
 *.tar
 *.tar.*
-*.jar
-*.exe
-*.msi
 *.zip
-*.log.*
-*.sig
-pkg/
-### Emacs ###
-# -*- mode: gitignore; -*-
-*~
-\#*\#
-.\#*
-# AUCTeX auto folder
-/auto/
-### Go ###
-# Binaries for programs and plugins
-*.exe~
+# Executables
+*.exe
 *.dll
-*.so
-*.dylib
-# Test binary, built with `go test -c`
-*.test
-# Output of the go coverage tool, specifically when used with LiteIDE
-*.out
-# Go workspace file
-go.work
-### Linux ###
-# temporary files which can be created if a process still has a handle open of a deleted file
-.fuse_hidden*
-# KDE directory preferences
-.directory
-# Linux trash folder which might appear on any partition or disk
-.Trash-*
-# .nfs files are created when an open file is removed but is still being accessed
-.nfs*
-### macOS ###
-.AppleDouble
-.LSOverride
-# Icon must end with two \r
-Icon
-# Thumbnails
-._*
-# Files that might appear in the root of a volume
-.DocumentRevisions-V100
-.fseventsd
-.Spotlight-V100
-.TemporaryItems
-.Trashes
-.VolumeIcon.icns
-.com.apple.timemachine.donotpresent
-# Directories potentially created on remote AFP share
+*.bin
+*.dat
 .AppleDB
 .AppleDesktop
 Network Trash Folder
 Temporary Items
 .apdisk
 ### macOS Patch ###
-# iCloud generated files
 *.icloud
 ### react ###
 .DS_*
@@ -234,7 +174,6 @@ sketch
 __generated__
 ### ReactNative.Android Stack ###
 .gradle/
-build/
 # Local configuration file (sdk path, etc)
 local.properties
 # Android Studio generated files and folders
@@ -278,7 +217,6 @@ gradle-app.setting
 !gradle-wrapper.properties
 # Cache of project
 .gradletasknamecache
-# Eclipse Gradle plugin generated files
 # Eclipse Core
 .project
 # JDT-specific (Eclipse Java Development Tools)
@@ -306,21 +244,13 @@ yarn-error.log
 ### Windows ###
 # Windows thumbnail cache files
 Thumbs.db:encryptable
-ehthumbs.db
 ehthumbs_vista.db
 # Dump file
 *.stackdump
 # Folder config file
 [Dd]esktop.ini
-# Recycle Bin used on file shares
-$RECYCLE.BIN/
 # Windows Installer files
-*.cab
 *.msix
-*.msm
-*.msp
-# Windows shortcuts
-*.lnk
 ### WordPress ###
 # Core
 # Note: if you don't want to stage/commit WP core files
@@ -336,7 +266,6 @@ $RECYCLE.BIN/
 #/readme.html
 #/wp-*.php
 #/xmlrpc.php
-
 # Configuration
 wp-config.php
 # Example themes
@@ -616,7 +545,6 @@ paket-files/
 # CodeRush personal settings
 .cr/personal
 # Python Tools for Visual Studio (PTVS)
-__pycache__/
 *.pyc
 # Cake - Uncomment if you are using it
 *.tss
@@ -645,11 +573,16 @@ ASALocalRun/
 healthchecksdb
 # Backup folder for Package Reference Convert tool in Visual Studio 2017
 MigrationBackup/
-# Ionide (cross platform F# VS Code tools) working folder
-.ionide/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 # VS Code files for those working on multiple tools
 *.code-workspace
 # JetBrains Rider
 *.sln.iml
+# AI
+.junie/
+.windsurfrules
+.lingma
+# Other
+.tern-port
+.dynamodb/
