--- a/.gitignore
+++ b/.gitignore
@@ -582,8 +582,9 @@ FodyWeavers.xsd
 # AI
 .junie/
 .windsurfrules
-.lingma
-.windsurf
+.lingma/
+.windsurf/
+.github/
 # Other
 .tern-port
 .dynamodb/
