feat(.editorconfig): add Go file formatting rules

--- a/templates/.editorconfig
+++ b/templates/.editorconfig
@@ -8,5 +8,8 @@ end_of_line = lf
 trim_trailing_whitespace = true
 insert_final_newline = true
 
+[*.go]
+indent_style = tab
+
 [*.md]
 trim_trailing_whitespace = false
