--- a/configs/oomd.conf
+++ b/configs/oomd.conf
@@ -19,6 +19,8 @@
 # See oomd.conf(5) for details
 
 [OOM]
-SwapUsedLimit=80%
-DefaultMemoryPressureLimit=80%
-DefaultMemoryPressureDurationSec=7s
+ManagedOOMMemoryPressure=kill
+ManagedOOMSwap=kill
+SwapUsedLimit=90%
+DefaultMemoryPressureLimit=60%
+DefaultMemoryPressureDurationSec=15s
